  The option logEmoticons is a comma-seperated list of emoticons numbers
  (see tables/emotions.txt), that you want to log.
- New config option: followBot
  Specifies that followTarget is a Kore bot. When enabled, a "move"
  command will be PM'ed to the follow target, telling him to go to
  where you are.
- Don't attack any monsters that are near portals.

xlr82xs:
- Removed dead monster count sub.
- Added admin password generation on blank aswell as default (since the skore default
  is blank, not "xxxxxxxxxx"
- New config.txt option securePassword. When turned on (ie set to 1) it will generate
  a new admin password every session
- New feature: random autoRestart:
  * Added new sub initRandomRestart() to randomise autoRestart in the config.txt file
    initRandomRestart() is controled by two new config.txt options autoRestartSeed 
    and autoRestartMin.
    autoRestart is now generated by autoRestartMin + rand(autoRestartSeed)
  * To carry on with the spirit of random restart times, there are another 3 new config.txt
    options.
    autoRestartSleep which turns on sleeping for a random time when set to 1
    autoSleepMin and autoSleepSeed (which act the same as the randomrestart options)
- Began work on better communication between bots. (Being lazy to start with (for a quick implement)
  and simply using a sub to detect known names (ie tank and follow targets, auth list users) that should
  be ignored by things such as chat ai so they can send eachother commands via chat (ie move, heal, etc)
  Eventually I'm looking at having the bots generate diagnostic information on a designated port, that can
  be polled by tankees (so they can find the tanker) and healers, so they can see the other bots location,
  hp, etc
  
- If you have the detoxify skill (by a card or being a thief) and get poisoned, you will automagically use it
- changed configModify() so it accepts a third paramater if it is 1 configModify() operates in "silent mode"